[project]
name = "complex-networks-cw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "igraph>=1.0.0",
    "leidenalg>=0.11.0",
    "pandas>=2.3.3",
    "python-louvain>=0.16",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
]
